feat(delivery): add send notification RESTFUL API
